--- a/NN/Untitled.ipynb
+++ b/NN/Untitled.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,10 +385,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting wget\n",
+      "  Using cached wget-3.2.zip (10 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Building wheels for collected packages: wget\n",
+      "  Building wheel for wget (setup.py): started\n",
+      "  Building wheel for wget (setup.py): finished with status 'done'\n",
+      "  Created wheel for wget: filename=wget-3.2-py3-none-any.whl size=9672 sha256=76135fe5f6ea51d730271212eae4f864c40a33b6db712554c99345cf4103607d\n",
+      "  Stored in directory: c:\\users\\chiar\\appdata\\local\\pip\\cache\\wheels\\a1\\b6\\7c\\0e63e34eb06634181c63adacca38b79ff8f35c37e3c13e3c02\n",
+      "Successfully built wget\n",
+      "Installing collected packages: wget\n",
+      "Successfully installed wget-3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# download tf models and install tfod\n",
+    "if os.name=='nt':\n",
+    "    !pip install wget\n",
+    "    import wget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
-   "source": []
+   "source": [
+    "if not os.path.exists(os.path.join(paths['APIMODEL_PATH'], 'research', 'object_detection')):\n",
+    "    !git clone https://github.com/tensorflow/models {paths['APIMODEL_PATH']}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Install Tensorflow Object Detection\n",
+    "if os.name=='posix':\n",
+    "    !apt-get install protobuf-compiler\n",
+    "    !cd Tensorflow/models/research && protoc object_detection/protos/*.proto --python_out=. && cp object_detection/packages/tf2/setup.py . && python -m pip install .\n",
+    "\n",
+    "if os.name=='nt':\n",
+    "    url=\"https://github.com/protocolbuffers/protobuf/releases/download/v3.15.6/protoc-3.15.6-win64.zip\"\n",
+    "    wget.download(url)\n",
+    "    !move protoc-3.15.6-win64.zip {paths['PROTOC_PATH']}\n",
+    "    !cd {paths['PROTOC_PATH']} && tar -xf protoc-3.15.6-win64.zip\n",
+    "    os.environ['PATH'] += os.pathsep + os.path.abspath(os.path.join(paths['PROTOC_PATH'], 'bin'))\n",
+    "    !cd Tensorflow/models/research && protoc object_detection/protos/*.proto --python_out=. && copy object_detection\\\\packages\\\\tf2\\\\setup.py setup.py && python setup.py build && python setup.py install\n",
+    "    !cd Tensorflow/models/research/slim && pip install -e . "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
