--- a/NN/Untitled.ipynb
+++ b/NN/Untitled.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,43 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cancel creation.\n",
-      "Cancel creation.\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2a641edc-b1c9-11ec-a06f-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.2a641edc-b1c9-11ec-a06f-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2a641edc-b1c9-11ec-a06f-84865adf2ffa.jpg -> Annotation:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2a641edc-b1c9-11ec-a06f-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2ba131be-b1c9-11ec-a1ab-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.2ba131be-b1c9-11ec-a1ab-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2ba131be-b1c9-11ec-a1ab-84865adf2ffa.jpg -> Annotation:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2ba131be-b1c9-11ec-a1ab-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2cdf9c93-b1c9-11ec-ab70-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.2cdf9c93-b1c9-11ec-ab70-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2cdf9c93-b1c9-11ec-ab70-84865adf2ffa.jpg -> Annotation:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2cdf9c93-b1c9-11ec-ab70-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2e1f4f56-b1c9-11ec-902d-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.2e1f4f56-b1c9-11ec-902d-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2f5f5f29-b1c9-11ec-ab5c-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.2f5f5f29-b1c9-11ec-ab5c-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.3a8d02c6-b1c9-11ec-b924-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.3a8d02c6-b1c9-11ec-b924-84865adf2ffa.xml\n",
-      "Cancel creation.\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.3bcaafcf-b1c9-11ec-a021-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.3bcaafcf-b1c9-11ec-a021-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.3d098ad3-b1c9-11ec-ac82-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.3d098ad3-b1c9-11ec-ac82-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.3d098ad3-b1c9-11ec-ac82-84865adf2ffa.jpg -> Annotation:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.3d098ad3-b1c9-11ec-ac82-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.3e46a0bd-b1c9-11ec-89f1-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.3e46a0bd-b1c9-11ec-89f1-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.3f82fb16-b1c9-11ec-99c5-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.3f82fb16-b1c9-11ec-99c5-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.27bb8c07-b1c9-11ec-80b4-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.27bb8c07-b1c9-11ec-80b4-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.31dc24f0-b1c9-11ec-8b2c-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.31dc24f0-b1c9-11ec-8b2c-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.36d2dc9e-b1c9-11ec-b657-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.36d2dc9e-b1c9-11ec-b657-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.309de393-b1c9-11ec-b0a5-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.309de393-b1c9-11ec-b0a5-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.2922f158-b1c9-11ec-949d-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.2922f158-b1c9-11ec-949d-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.3593a33a-b1c9-11ec-aa49-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.3593a33a-b1c9-11ec-aa49-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.39509b08-b1c9-11ec-97dc-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.39509b08-b1c9-11ec-97dc-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.345493bd-b1c9-11ec-8355-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.345493bd-b1c9-11ec-8355-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.33179053-b1c9-11ec-8149-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.33179053-b1c9-11ec-8149-84865adf2ffa.xml\n",
-      "Image:C:\\Users\\chiar\\PycharmProjects\\detect_ripe_strawberry\\NN\\Tensorflow\\workspace\\images\\collectedimages\\ripe\\ripe.38108936-b1c9-11ec-ada1-84865adf2ffa.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/ripe.38108936-b1c9-11ec-ada1-84865adf2ffa.xml\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# open up the application to label images\n",
     "\n",
