Updated read ME

--- a/NN/Untitled.ipynb
+++ b/NN/Untitled.ipynb
@@ -253,13 +253,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading setting failed\n",
+      "Image:C:\\Users\\chiar\\Downloads\\strawberry set 2\\images (1).jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/images (1).xml\n",
+      "Image:C:\\Users\\chiar\\Downloads\\strawberry set 2\\strawberry-berry-ripe-strawberry-red-strawberry-garden-strawberry-appetizing.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/strawberry-berry-ripe-strawberry-red-strawberry-garden-strawberry-appetizing.xml\n",
+      "Image:C:\\Users\\chiar\\Downloads\\strawberry set 2\\What-Causes-Small-Strawberries-2.jpg -> Annotation:C:/Users/chiar/PycharmProjects/detect_ripe_strawberry/NN/Tensorflow/workspace/images/collectedimages/ripe/What-Causes-Small-Strawberries-2.xml\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# open up the application to label images\n",
     "\n",
